--- a/main.ipynb
+++ b/main.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
        "9         2  Healthcare Representative       Married       No             No  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +331,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "level                      object\n",
+       "Age                         int64\n",
+       "BusinessTravel             object\n",
+       "Department                 object\n",
+       "Education                  object\n",
+       "Education.1                 int64\n",
+       "EducationField             object\n",
+       "EnvironmentSatisfaction     int64\n",
+       "Gender                     object\n",
+       "HourlyRate                  int64\n",
+       "JobLevel                    int64\n",
+       "JobRole                    object\n",
+       "MaritalStatus              object\n",
+       "OverTime                   object\n",
+       "ClassAttrition             object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -411,13 +446,12 @@
     "\n",
     "Dalam proses preposessing data pada domain kasus HR attrition terdapat beberapa tahapan :\n",
     "\n",
-    "- Data Filltering (Coloum Droping)\n",
-    "- Tranformasi Data (Pemetaan Kondisional)"
+    "- Data Filltering (Coloum Droping)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,19 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Mengubah kolom HourlyRate sesuai dengan kondisi\n",
-    "#df['HourlyRate'] = df['HourlyRate'].apply(lambda rate: \"High\" if rate >= 75 else (\"Medium\" if 40 <= rate < 75 else \"Low\"))\n",
-    "\n",
-    "# Berdasarkan glassdoor : Low = < 40$, Medium = 40$ - 75$, High = > 75$, \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +682,7 @@
        "9       Married       No             No  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +720,7 @@
      "text": [
       "Nilai unik dari target class: ['Yes' 'No']\n",
       "\n",
-      "Jumlah total data (n(Total)): 1470\n",
+      "Jumlah total data (n(T)): 1470\n",
       "Jumlah data dengan target class Yes (n(A1)): 237\n",
       "Jumlah data dengan target class No (n(A2)): 1233\n",
       "Prior probability untuk target class Yes (P(A1)): 0.16122448979591836\n",
@@ -720,8 +742,8 @@
     "\n",
     "# Jumlah total data\n",
     "n_T = len(df)\n",
-    "prior['n(Total)'] = n_T\n",
-    "print(f\"Jumlah total data (n(Total)): {n_T}\")\n",
+    "prior['n(T)'] = n_T\n",
+    "print(f\"Jumlah total data (n(T)): {n_T}\")\n",
     "\n",
     "# Jumlah data untuk setiap nilai target class\n",
     "for idx, target in enumerate(target_class_values):\n",
@@ -748,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -958,7 +980,7 @@
     "        print(\"=\" * 50)\n",
     "        print(f\"Kontigensi dari atribut \\\"{attribute}\\\"\")\n",
     "        print(\"-\" * 50)\n",
-    "        for target in target_class_value:\n",
+    "        for target in target_class_values:\n",
     "            print(f\"{target_class} \\\"{target}\\\"\")\n",
     "            attribute_class_value = df[attribute].unique().tolist()\n",
     "            total = 0\n",
@@ -967,9 +989,7 @@
     "                n_Ai = len(df[(df[attribute] == attribute_value) & (df[target_class] == target)])\n",
     "                print(f\"{attribute_value} = {n_Ai}\")\n",
     "                total += n_Ai\n",
-    "            print(f\"Total = {total}\\n\")\n",
-    "            \n",
-    "    "
+    "            print(f\"Total = {total}\\n\")"
    ]
   },
   {
@@ -986,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1229,7 +1249,7 @@
     "        print(\"=\" * 50)\n",
     "        print(f\"Hasil Pelatihan P(B|Ai) dari atribut \\\"{attribute}\\\"\")\n",
     "        print(\"=\" * 50)\n",
-    "        for baris, target in enumerate(target_class_value):\n",
+    "        for baris, target in enumerate(target_class_values):\n",
     "            print(f\"{attribute}\")\n",
     "            print(f\"{target_class} \\\"{target}\\\" => P(B|A{baris + 1})\")\n",
     "            attribute_class_value = df[attribute].unique().tolist()\n",
@@ -1242,14 +1262,14 @@
     "                print(f\"{attribute_value} = {p_B_Ai}\")\n",
     "                total += p_B_Ai\n",
     "            print(f\"Hasil = {total}\")\n",
-    "            if(baris < len(target_class_value) - 1):\n",
+    "            if(baris < len(target_class_values) - 1):\n",
     "                print(\"-\" * 50)\n",
     "        print(\"\\n\")\n",
     "\n",
     "\n",
     "hasil_pelatihan = {}\n",
     "\n",
-    "for target in target_class_value:\n",
+    "for target in target_class_values:\n",
     "    hasil_pelatihan[target] = {}\n",
     "    for attribute in attributes:\n",
     "        if attribute != target_class:\n",
@@ -1275,7 +1295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1455,7 +1475,7 @@
        "5         1  Laboratory Technician        Single      Yes              ?  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1487,7 +1507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1533,7 +1553,7 @@
     "\n",
     "for baris, data in df_test.iterrows():\n",
     "    probability.append({})\n",
-    "    for target in target_class_value:\n",
+    "    for target in target_class_values:\n",
     "        probability[baris][target] = {}\n",
     "        for attribute in attributes:\n",
     "            if attribute != target_class:\n",
@@ -1541,7 +1561,7 @@
     "\n",
     "for baris, data in df_test.iterrows():\n",
     "    print(f\"Data ke-{baris + 1}\")\n",
-    "    for index, target in enumerate(target_class_value):\n",
+    "    for index, target in enumerate(target_class_values):\n",
     "        total_probability = 1\n",
     "        for attribute in attributes:\n",
     "            if attribute != target_class:\n",
@@ -1553,7 +1573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1652,7 +1672,7 @@
     "    print(\"-\" * 100)\n",
     "    max_posterior = 0\n",
     "    predict = \"\"\n",
-    "    for index, target in enumerate(target_class_value):\n",
+    "    for index, target in enumerate(target_class_values):\n",
     "        total_probability = 1\n",
     "        for attribute in attributes:\n",
     "            if attribute != target_class:\n",
@@ -1674,7 +1694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1854,7 +1874,7 @@
        "5         1  Laboratory Technician        Single      Yes            Yes  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1874,7 +1894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
