--- a/main.ipynb
+++ b/main.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,18 +44,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load Data\n",
-    "filename = './data//HREmployeeAttrition.xlsx'\n",
+    "filename = './data/HREmployeeAttrition.xlsx'\n",
     "df = pd.read_excel(filename)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
        "9         2  Healthcare Representative       Married       No             No  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +682,7 @@
        "9       Married       No             No  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1006,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1186,7 +1186,14 @@
       "ClassAttrition \"No\" => P(B|A2)\n",
       "JobRole :\n",
       "Sales Executive = 0.21816707218167072\n",
-      "Research Scientist = 0.19870235198702352\n",
+      "Research Scientist = 0.19870235198702352"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
       "Laboratory Technician = 0.1597729115977291\n",
       "Manufacturing Director = 0.10948905109489052\n",
       "Healthcare Representative = 0.0989456609894566\n",
@@ -1295,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1475,7 +1482,7 @@
        "5         1  Laboratory Technician        Single      Yes              ?  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1507,7 +1514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1573,7 +1580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1694,7 +1701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1874,7 +1881,7 @@
        "5         1  Laboratory Technician        Single      Yes            Yes  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1894,7 +1901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
